istio-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-callme-v2
  labels:
    app: callme
    version : v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: callme
      version: v2
  template:
    metadata:
      labels:
        app: callme
        version : v2
    spec:
      containers:
      - name: spring-boot-callme
        image: urvishparikh/spring-boot-callme-v2
        ports:
        - containerPort: 8081
