istio-service.yaml
kind: Service
apiVersion: v1
metadata:
  # Unique key of the Service instance
  name: spring-boot-callme
spec:
  ports:
  # Accept traffic sent to port 80
  - name: http
    port: 8081
    targetPort: 8081
  selector:
    # Loadbalance traffic across Pods matching
    # this label selector
    app: callme
    version : v1
  # Create an HA proxy in the cloud provider
  # with an External IP address - *Only supported
  # by some cloud providers*
  type: NodePort
