istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: callme-vs
spec:
  hosts:
  - "*"
  gateways:
  - boot-gateway
  http:
  - match:
    - uri:
        prefix: "/ping"
    route:
    - destination:
        port:
          number: 8081
        host: spring-boot-callme
